force-app/main/default/objects/Contact/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>