force-app/main/default/objects/Contact/fields/Customer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fax__c</fullName>
    <label>Customer Fax</label>
    <length>25</length>
    <type>Text</type>
</CustomField>