force-app/main/default/objects/Contact/fields/Date_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Account Created</label>
    <type>DateTime</type>
</CustomField>