force-app/main/default/objects/Contact/fields/Date_Account_Modified__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Modified__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Account Modified</label>
    <type>DateTime</type>
</CustomField>