force-app/main/default/objects/Contact/fields/Name_Type__c.field-meta.xml
<CustomField>
    <fullName>Name_Type__c</fullName>
    <formula>FirstName+&#39; &#39;+LastName+&#39; &#39;+text(Type_TBM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name#Type</label>
    <type>Text</type>
</CustomField>