force-app/main/default/objects/Contact/fields/Type_TBM__c.field-meta.xml
<CustomField>
    <fullName>Type_TBM__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Optician</fullName>
            </value>
            <value>
                <fullName>Retail Manager</fullName>
            </value>
            <value>
                <fullName>Staff Member</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Optician</fullName>
            </value>
            <value>
                <fullName>PAC Attendee</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>