force-app/main/default/objects/Contact/fields/Wtls_test__c.field-meta.xml
<CustomField>
    <fullName>Wtls_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wtls test</label>
    <type>Checkbox</type>
</CustomField>