force-app/main/default/objects/Contact/fields/XeroContactExternalId__c.field-meta.xml
<CustomField>
    <fullName>XeroContactExternalId__c</fullName>
    <label>XeroContactExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>